apps/quote/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote
  namespace: app-quote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quote
  template:
    metadata:
      labels:
        app: quote
    spec:
      containers:
        - name: quote
          image: vijaydocker404/quote-app:v1
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "125m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
