apps/quote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quote
  namespace: app-quote
spec:
  selector:
    app: quote
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
